# whale-hunter

./: .gitignore  CODE_OF_CONDUCT.md  README.md  dev.env  docker-compose.yml
client/: next.config.js  next.config.mjs  package.json  tsconfig.json
client/components/: HomeLayout.tsx  TokenImage.tsx
client/constants/: tokens.ts
client/graphql/: client.ts
client/hooks/: index.tsx  useActions.ts  useGetTokenLogosPaths.ts  useGetTokensData.ts  useHeight.ts  useInput.ts  (+2 more)
server/: Dockerfile  pyproject.toml
server/accounts/: admin.py  forms.py  managers.py  models.py  schema.py  serializers.py  tasks.py  utils.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_user_password_change_token_user_verification_token.py
server/accounts/templates/email_templates/: registration_email.txt  reset_password.txt
server/api/: constants.py  functions.py  schema.py  types.py  urls.py  utils.py  views.py
server/blockchains/: admin.py  models.py
server/blockchains/eth/: apps.py  functions.py  schema.py  urls.py  utils.py
server/blockchains/functions/: eth.py
server/blockchains/functions_classes/: eth.py
server/blockchains/migrations/: 0001_initial.py
server/blockchains/params/: eth.py
server/blockchains/requests_params/: eth.py
server/blockchains/requests_params_classes/: eth.py
server/blockchains_functions/: eth.py
server/eth/: functions.py  urls.py  views.py
server/permissions/: models.py
server/permissions/migrations/: 0001_initial.py
server/server/: celery.py  schema.py  urls.py  utils.py
server/server/settings/: base.py  dev.py
(+32 files in other folders)
