[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Belphin <findolph0003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
python-decouple = "^3.8"
graphene = "^3.3"
graphene-django = "^3.2.0"
django-graphql-jwt = "^0.4.0"
serious-django-graphene = "^0.5.1"
django-cors-headers = "^4.3.1"
babel = "^2.14.0"
boto3 = "^1.34.61"
pillow = "^10.2.0"
celery = {extras = ["redis"], version = "^5.3.6"}
django-redis = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"